# kfvm-kokkos

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
CMakeModules/: attribution
docs/scratch/: Cons2PrimJac.tex  Prim2ConsJac.tex  SRHydroNotes.tex  aos.py  c2pJac.py  p2cJac.py  viscoSten.tex
exec/: Make.kfvm  pdi_euler_2d.yml  pdi_euler_3d.yml
exec/AstroJet/: InitialCondition.H  ProblemSetup.cpp  UserBCs.H  UserParameters.H  astrojetHD2D.init  astrojetHD3D.init  astrojetLD2D.init  astrojetLD3D.init
exec/AstroJetHD/: Definitions.H  InitialCondition.H  ProblemSetup.cpp  UserBCs.H  astrojet2d.init  astrojet3d.init
exec/AstroJetLD/: Definitions.H  InitialCondition.H  ProblemSetup.cpp  astrojet2d.init  astrojet3d.init
exec/AstroJetSR/: Definitions.H  InitialCondition.H  ProblemSetup.cpp  UserBCs.H  astrojetsr2d.init  astrojetsr3d.init
exec/BrioWuX/: Definitions.H  InitialCondition.H  ProblemSetup.cpp  briowu.init
exec/BuchHelz/: Definitions.H  InitialCondition.H  buchhelz.init
exec/CircAlfven/: Definitions.H  InitialCondition.H  circalfven.init
exec/CircImplosion/: Definitions.H  InitialCondition.H  ProblemSetup.cpp  UserParameters.H  implosion.init
exec/CircRayTay/: Definitions.H  InitialCondition.H  ProblemSetup.cpp  SourceTerms.H  circraytay2d.init  circraytay3d.init
exec/CylindricalTest/: Definitions.H  InitialCondition.H  ProblemSetup.cpp  UserBCs.H  cyltest.init
exec/DispRel/: Definitions.H  InitialCondition.H  SourceTerms.H  UserBCs.H  disprel.init
exec/DoubleMach/: Definitions.H  InitialCondition.H  Makefile  ProblemSetup.cpp  UserBCs.H  doublemach.init  doublemach2d.init
exec/DoubleMachMapped/: Definitions.H  InitialCondition.H  ProblemSetup.cpp  UserBCs.H  doublemach2d.init
exec/FieldLoop/: Definitions.H  InitialCondition.H  ProblemSetup.cpp  fieldloop.init
exec/FluxRope/: Definitions.H  InitialCondition.H  ProblemSetup.cpp  SourceTerms.H  fluxrope.init
exec/FreeStream/: Definitions.H  InitialCondition.H  ProblemSetup.cpp  UserParameters.H  freestream.init
exec/Implosion/: Definitions.H  InitialCondition.H  ProblemSetup.cpp  implosion2d.init  implosion3d.init
exec/IsenVort/: Definitions.H  InitialCondition.H  Makefile  ProblemSetup.cpp  UserBCs.H  isenvort.init
exec/KelvinHelmholtz/: Definitions.H  InitialCondition.H  ProblemSetup.cpp  kelvhelm.init  kelvhelm2d.init  kelvhelm3d.init
exec/LinAdv/: Definitions.H  InitialCondition.H  ProblemSetup.cpp  linadv.init
exec/MagAstroJetHD/: Definitions.H  InitialCondition.H  ProblemSetup.cpp  UserBCs.H  UserParameters.H  magastro2d.init  magastro3d.init
exec/MagBlast/: Definitions.H  InitialCondition.H  ProblemSetup.cpp  UserParameters.H  magblast.init
exec/MagJetGen/: Definitions.H  InitialCondition.H  ProblemSetup.cpp  UserBCs.H  magjet.init
exec/MagKelvinHelmholtz/: Definitions.H  InitialCondition.H  kelvhelm.init
exec/MagRayleighTaylor/: Definitions.H  InitialCondition.H  SourceTerms.H  rayleightaylor.init  rayleightaylor2d.init  rayleightaylor3d.init
exec/MagShockBubble/: Definitions.H  InitialCondition.H  UserParameters.H  shockbubble.init
exec/MagVort2d/: l1err  (+8 more)
python/: eocSummary.py  gpplot.py  hydroLinPrim.py  pctDiff.py  plotLineX.py  plotLineY.py  plotLineZ.py  problemGenerator.py  solErrorL1.py
src/: BoundaryConditions.H  BoundaryConditions_K.H  BoundaryData.H  BoundaryData.cpp  CMakeLists.txt  Dimension.H  FluidProperties.H  Geometry.H  GeometryTypes.H  LayoutMPI.H  Make.defs  Make.package  NetCDFWriter.H  NetCDFWriter.cpp  ParameterStructs.H  ParameterStructs.cpp  PrinterMPI.H  ProblemSetup.H  SimVar.H  SolutionWriter.H  SolutionWriter.cpp  Solver.H  Solver.cpp  Types.H  main.cpp
src/hydro/: CMakeLists.txt  EOS.H  Hydro.H  Hydro_K.H  Make.package  Riemann.H
src/io/: CMakeLists.txt  WriterPDI.H  WriterPDI.cpp
src/numeric/: CMakeLists.txt  Make.package  Numeric.H  Numeric.cpp  Numeric_K.H  RKTypes.H
src/physics/: CMakeLists.txt  Common_K.H  EOS.H  EquationTypes.H  Physics_K.H  RSTypes.H  Riemann.H  SimVar.H
src/physics/hydro/: CMakeLists.txt  EOS.H  EulerAdiabatic_BCCoeffs.H  EulerAdiabatic_EOS.H  EulerAdiabatic_K.H  EulerAdiabatic_Riemann.H  EulerAdiabatic_SimVar.H  Hydro_BCCoeffs.H  Hydro_EOS.H  Hydro_K.H  Hydro_Riemann.H  Hydro_SimVar.H  Riemann.H
src/physics/linadv/: CMakeLists.txt  LinAdv_BCCoeffs.H  LinAdv_EOS.H  LinAdv_K.H  LinAdv_Riemann.H
src/physics/mhd/: CMakeLists.txt  MHD_GLM_BCCoeffs.H  MHD_GLM_EOS.H  MHD_GLM_K.H  MHD_GLM_Riemann.H  MHD_GLM_SimVar.H  MHD_K.H  Riemann.H
src/physics/mhd_8w/: CMakeLists.txt  MHD_8W_BCCoeffs.H  MHD_8W_EOS.H  MHD_8W_K.H  MHD_8W_Riemann.H
src/physics/mhd_glm/: CMakeLists.txt  MHD_GLM_EOS.H  MHD_GLM_K.H  MHD_GLM_Riemann.H
src/physics/navierstokes/: CMakeLists.txt  NavierStokes_BCCoeffs.H  NavierStokes_EOS.H  NavierStokes_K.H  NavierStokes_Riemann.H
src/physics/srhydro/: CMakeLists.txt  SRHydro_BCCoeffs.H  SRHydro_EOS.H  SRHydro_K.H  SRHydro_Riemann.H  SRHydro_SimVar.H
src/stencil/: CMakeLists.txt  CSEKernel.H  CSEKernel.cpp  EvalFunctionals.H  HermitePolynomials.H  HilbertSchmidtSVD.H  HilbertSchmidtSVD.cpp  KernelTypes.H  Kernels.H  Make.package  Monomials.H  Monomials.cpp  PHSKernel.H  ReconVectors.H  ReconVectors.cpp  SEKernel.H  SEKernel.cpp  Stencil.H  Stencil.cpp  StencilInfo.H  StencilSymmetry.H  StencilSymmetry.cpp  Stencil_K.H  VectorValuedRA.H  VectorValuedRA.cpp
user/: Make.defs.sample  pdi_euler_2d.yml  pdi_euler_3d.yml  pdi_euler_xdmf.yml  pdi_linadv_xdmf.yml  pdi_mhd_8w_xdmf.yml  pdi_mhd_glm_2d.yml  pdi_mhd_glm_3d.yml  pdi_mhd_glm_xdmf.yml  pdi_srhydro_xdmf.yml
(+414 files in other folders)
